# acoustic-engine

./: .gitignore  ARCHITECTURE.md  CO_Sensor_profile.yaml  DEPLOYMENT.md  Dockerfile  Dockerfile.release  README.md  Smoke_Alarm_profile.yaml  check_imports.py  config.example.yaml  debug_imports.py  docker-compose.yml  pyproject.toml  requirements.txt  test_profile.yaml
benchmarks/: README.md  benchmark_suite.py  benchmark_suite_chaotic.py  benchmark_suite_complex_noise.py  benchmark_suite_drone.py  benchmark_suite_dynamic.py  benchmark_suite_edge_cases.py  benchmark_suite_specificity.py  benchmark_suite_stress.py
docs/: tuning_guide.md
examples/: basic_detection.py  process_chunks.py  test_with_noise.py
profiles/: new.yaml
scripts/: benchmark_engine.py  check_dsp.py  verify_parallel.py  verify_profile.py  verify_runner_logic.py
scripts/dev/: check_imports.py  debug_imports.py
src/acoustic_alarm_engine/: __init__.py  config.py  dsp.py  engine.py  event_buffer.py  filter.py  generator.py  listener.py  matcher.py  models.py  parallel_engine.py  profiles.py  windowed_matcher.py
src/acoustic_alarm_engine/analysis/: README.md  generator.py  windowed_matcher.py
src/acoustic_alarm_engine/input/: README.md
src/acoustic_alarm_engine/processing/: README.md  dsp.py  filter.py
src/acoustic_alarm_engine/tester/: __init__.py  __main__.py  mixer.py  runner.py
src/acoustic_alarm_engine/tuner/: __init__.py  __main__.py  app.js  audio-engine.js  check_braces.py  index.html  styles.css
src/acoustic_engine/analysis/: README.md
src/acoustic_engine/input/: README.md
src/acoustic_engine/processing/: README.md
tests/: test_hybrid.py  test_models.py  test_noise_resilience.py  test_profiles.py  test_windowed.py
